--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "html-minifier": "^4.0.0",
     "image-size": "^1.0.0",
     "lodash": "^4.17.21",
+    "marked": "^3.0.4",
     "md5": "^2.3.0",
     "minimatch": "^3.0.4",
     "moment": "^2.29.1",
