chore: lorem ipsum

--- a/pages/hoiandor/index.yaml
+++ b/pages/hoiandor/index.yaml
@@ -1,4 +1,5 @@
 title: Hoian d’Or - Chính thức chủ đầu tư
+description: "Tên Pháp lý/ Thương mại: Khu du lịch sinh thái Cồn Bắp/ Hoian d'Or, Vị trí: Cồn Bắp - Phường Cẩm Nam - Tp Hội An - tỉnh Quảng Nam, Quy mô: 24.48ha, Mật độ xây dựng: 19.12%, Chủ đầu tư: Công ty TNHH Du lịch Sinh thái Cồn Bắp, Tổng vốn đầu tư: 2.330 tỷ đồng, Sản phẩm/ Dịch vụ/ Tiện ích: Shophouse - Villa - Hotel 5* - Boutique - Condotel"
 preloader:
   text: Hoian d’Or
 header:
