chore: lorem ipsum

--- a/pages/hoiandor/index.yaml
+++ b/pages/hoiandor/index.yaml
@@ -37,8 +37,9 @@ header:
       href: "/#lien-he"
   contact:
     facebook: https://www.facebook.com/anh.lan.779205
-    email: la@hoiandor.org
-    mobile: "+84327898395"
+    email: cskh@hoiandor.org
+    mobile: "0327898395"
+    mobileDisplay: "032 789 8395"
     address: Con Bap, Cam Nam Ward Hoi An, Quang Nam
     company: ConBap Ecological Tourist Co. LTD
 banner:
