chore: lorem ipsum

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/prompts": "^2.0.14",
     "@types/pug": "^2.0.5",
     "@types/puppeteer": "^5.4.4",
+    "@types/sharp": "^0.29.2",
     "@types/slug": "^5.0.2",
     "@types/uglify-js": "^3.13.1",
     "@types/yaml": "^1.9.7",
@@ -58,6 +59,7 @@
     "prompts": "^2.4.1",
     "pug": "^3.0.2",
     "puppeteer": "^10.4.0",
+    "sharp": "^0.29.1",
     "slug": "^5.1.0",
     "tinify": "^1.6.0-beta.2",
     "uglify-js": "^3.14.2",
