chore: lorem ipsum

--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "vercel": "npm run build && npm run deploy",
     "static-server-dist": "static-server ./dist/hoiandor",
     "static-server-release": "static-server ./hosts/hoiandor/public",
-    "image-optimizer": "ts-node scripts/imageOptimizer.ts"
+    "image-optimizer": "ts-node scripts/imageOptimizer.ts",
+    "notion-exporter": "ts-node scripts/notionExporter.ts"
   },
   "devDependencies": {
     "@prettier/plugin-pug": "^1.16.6",
+    "@types/adm-zip": "^0.4.34",
     "@types/axios": "^0.14.0",
     "@types/cheerio": "^0.22.30",
     "@types/clean-css": "^4.2.5",
@@ -44,6 +46,7 @@
   "dependencies": {
     "@types/fs-extra": "^9.0.13",
     "@types/minimatch": "^3.0.5",
+    "adm-zip": "^0.5.9",
     "axios": "^0.22.0",
     "cheerio": "^1.0.0-rc.10",
     "clean-css": "^5.2.0",
