--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "ts-node scripts/build.ts",
     "build-watch": "chokidar \"./scripts/build.ts\" \"./scripts/utils/**/*\" \"./blocks/**/*\" \"./layouts/**/*\" \"./pages/**/*\" \"./assets/**/*\" --initial -c \"npm run build\"",
     "deploy": "ts-node scripts/deploy.ts",
-    "before-push": "npm run build && npm run deploy",
+    "before-push": "npm run notion-exporter && npm run build && npm run deploy",
     "vercel": "npm run hello-ts",
     "static-server-dist": "static-server ./dist/hoiandor",
     "static-server-release": "static-server ./hosts/hoiandor/public",
