chore: lorem ipsum dolor sit amet

--- a/pages/hoiandor/index.yaml
+++ b/pages/hoiandor/index.yaml
@@ -123,21 +123,21 @@ about03:
     - title: Không gian văn hóa <strong>Hoi an d'Or</strong>
       subTitle: Nối miền “Di sản“
       description: Không gian văn hoá như một sợi dây kết nối các giá trị trường tồn của mảnh đất Hội An để thế hệ sau có thể tiếp nối và phát huy tinh hoa di sản.
-      href: /
+      href: /bai-viet/khong-gian-van-hoa-hoian-dor.html
       image:
         src: /assets/images/Khong-gian-van-hoa-05-05-cropped.png
         alt: Không gian văn hoá Hoi an d'Or
     - title: Thương cảng <strong>Hoi an d'Or</strong>
       subTitle: Thương cảng “Vàng son“
       description: Tái hiện lại một hình bóng Hội An trên bến dưới thuyền sầm uất một thời. Kết nối với Quảng trường cộng hưởng, nơi đây sẽ là điểm kết nối con đường tơ lụa, mở ra một thế giới huyền ảo cùng hòa âm ánh sáng.
-      href: /
+      href: /bai-viet/hoian-dor-thuong-cang-lien-ke-pho-hoi.html
       image:
         src: /assets/images/Thuong-cang-cropped.png
         alt: Thương cảng Hoi an d'Or
     - title: Khu nông nghiệp sinh thái <strong>Hoi an d'Or</strong>
       subTitle: Chạm vào “Thiên nhiên“
       description: Khu nông nghiệp sinh thái phía Đông là nơi để bạn và gia đình hoà tâm hồn cùng thiên nhiên, tận hưởng những trải nghiệm sinh thái đầy độc đáo và mới lạ.
-      href: /
+      href: /bai-viet/cong-vien-sinh-thai-hoian-dor.html
       image:
         src: /assets/images/Cong-vien-sinh-thai-cropped.png
         alt: Khu nông nghiệp sinh thái Hoi an d'Or
